URL parameters added

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,8 @@
   </head>
   <body>
     {{>header}}
-    <h1>Finally dynamic content!</h1>
+    <h1>Finally dynamic content! by {{name}}</h1>
+    
     {{>footer}}
   </body>
 </html>
